trunk/leaf/leaf_group_01/Thirstys-waterfall/bridge/base/thirstys-waterfall-service.yaml
# check if there is at least one published port

#! thirstys-waterfall-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: thirstys-waterfall-published
    namespace: thirstys-waterfall
    labels:
        com.docker.compose.project: thirstys-waterfall
        com.docker.compose.service: thirstys-waterfall
spec:
    selector:
        com.docker.compose.project: thirstys-waterfall
        com.docker.compose.service: thirstys-waterfall
    ports:
        - name: thirstys-w-8080
          port: 8080
          protocol: TCP
          targetPort: thirstys-w-8080
