trunk/leaf/leaf_group_01/Thirstys-waterfall/bridge/base/thirstys_network-network-policy.yaml
#! thirstys_network-network-policy.yaml
# Generated code, do not edit
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: thirstys-network-network-policy
    namespace: thirstys-waterfall
spec:
    podSelector:
        matchLabels:
            com.docker.compose.network.thirstys_network: "true"
    policyTypes:
        - Ingress
        - Egress
    ingress:
        - from:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.thirstys_network: "true"
    egress:
        - to:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.thirstys_network: "true"
